// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should match snapshot in avatar with children prop 1`] = `
.c0 {
  border-radius: 8px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <p>
      LC
    </p>
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in circle avatar 1`] = `
.c1 {
  width: 50%;
  height: 50%;
}

.c0 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <svg
      class="c1"
      fill="#FFFFFF"
      height="50%"
      width="50%"
    />
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in circle avatar with placeholder prop 1`] = `
.c1 {
  width: 50%;
  height: 50%;
}

.c0 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <svg
      class="c1"
      fill="#FFFFFF"
      height="50%"
      width="50%"
    />
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in circle avatar with src and alt prop 1`] = `
.c0 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c1 {
  max-width: 100%;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <img
      alt="Gympass brand logo"
      class="c1"
      src="https://github.com/Gympass.png"
    />
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in default avatar 1`] = `
.c0 {
  border-radius: 8px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 78px;
  height: 78px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c1 {
  width: 50%;
  height: 50%;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="78"
    overflow="hidden"
    width="78"
  >
    <svg
      class="c1"
      fill="black"
      height="50%"
      width="50%"
    />
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in default avatar with placeholder prop 1`] = `
.c1 {
  width: 50%;
  height: 50%;
}

.c0 {
  border-radius: 8px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <svg
      class="c1"
      fill="#FFFFFF"
      height="50%"
      width="50%"
    />
  </div>
</div>
`;

exports[`<Avatar /> should match snapshot in default avatar with src and alt prop 1`] = `
.c0 {
  border-radius: 8px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c1 {
  max-width: 100%;
}

<div>
  <div
    class="c0"
    display="flex"
    elevation="small"
    height="48"
    overflow="hidden"
    width="48"
  >
    <img
      alt="Gympass brand logo"
      class="c1"
      src="https://github.com/Gympass.png"
    />
  </div>
</div>
`;
